--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>💛 Miles's Personal Site</title>
 	</head>
 	<body>
-		<img src="images/miles.png" alt="Miles's Profile Picture">
+		<img src="miles.png" alt="Miles's Profile Picture">
 
 		<h1>Miles Mukerji</h1>
 		<p><em>Founder and CTO of <strong>The Miles Brewery</strong>.</em></p>
