--- a/index.html
+++ b/index.html
@@ -2,23 +2,83 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>💛 Miles's Personal Site</title>
+		<title>Miles's Personal Site</title>
 	</head>
 	<body>
-		<img src="miles.png" alt="Miles's Profile Picture">
-
-		<h1>Miles Mukerji</h1>
+		<table cellspacing="20">
+			<tr>
+				<td><img src="miles.png" alt="Miles's Profile Picture"></td>
+				<td><h1>Miles Mukerji</h1>
 		<p><em>Founder and CTO of <strong>The Miles Brewery</strong>.</em></p>
-		<p>I am an iOS and Web Developer. I love coffee and brew my own beers.</p>
+		<p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+			</tr>
+		</table>
+
+		
+
+		
 		<hr>
 
-		<h2>Education</h2>
+		<h3>Education</h3>
 		<ul>
 			<li>100 Days of Code: The Complete Python Pro Bootcamp for 2023</li>
 			<li>The Python Mega Course: Build 18 Professional Web Apps</li>
 		</ul>
 
+		<h3>Work Experience</h3>
+		<table border="1">
+			<thead>
+				<tr>
+					<th>Year(s)</th>
+					<th>Work</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>2010-2013</td>
+					<td>Lead Developer at Tempo App</td>
+				</tr>
+				<tr>
+					<td>2010</td>
+					<td>Researcher at The Institute of  Cognitive Neurosciences</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<h3>Skills</h3>
+		<table>
+			<tr>
+				<td>
+					<table>
+						<tr>
+							<td>Python</td>
+							<td>⭐⭐⭐⭐</td>
+						</tr>
+						<tr>
+							<td>Web Development</td>
+							<td>⭐⭐⭐</td>
+						</tr>
+					</table>
+				</td>
+				<td>
+					<table>
+						<tr>
+							<td>Rubik's Cube</td>
+							<td>⭐⭐⭐</td>
+						</tr>
+						<tr>
+							<td>Drawing</td>
+							<td>⭐</td>
+						</tr>
+					</table>
+				</td>
+			</tr>	
+		</table>
+
+		<hr>
+
 		<a href="hobbies.html">My Hobbies</a>
+		<a href="contact-me.html">Contact Me</a>
 		
 	</body>
 </html>
